@@ -257,7 +257,8 @@ Use these instead of SCM_SETLENGTH
 SCM_VECTOR_BASE, SCM_UVECTOR_BASE, SCM_BITVECTOR_BASE, SCM_COMPLEX_MEM,
 SCM_ARRAY_MEM
 
-Use these instead of SCM_CHARS or SCM_VELTS.
+Use these instead of SCM_CHARS, SCM_UCHARS, SCM_ROCHARS, SCM_ROUCHARS or
+SCM_VELTS.
 
 ** New macros:  SCM_SET_BIGNUM_BASE, SCM_SET_STRING_CHARS, 
 SCM_SET_SYMBOL_CHARS, SCM_SET_UVECTOR_BASE, SCM_SET_BITVECTOR_BASE,
